# context-engine

./: .flake8  .gitignore  .mcp.json  CLAUDE.md  Makefile  README.md  claude_desktop_config.json  docker-compose.yml  pyproject.toml  requirements-test.txt  requirements.txt
.github/workflows/: lintinig.yml  main.yml
data/: rollback-policy.md
docs/: DEMO_PLAN.md  SETUP.md
docs/plans/: agent_memory.md
schema/: schema.cypher
scripts/: healthcheck.py  reset.py
solutions/: checkpoint1.cypher  claude_desktop_config.json  part2_server.py  store.py
src/: ingest.py
src/memory/: README.md  agent.py  config.py  demo.py  llm.py  mcp_server.py  memory.py  requirements.txt  reset.py  seed.py
tests/: conftest.py  test_base.py
tests/data/: deploys.jsonl  incident-4827.md
